--- a/public/stylesheets/css/first_page.css
+++ b/public/stylesheets/css/first_page.css
@@ -634,3 +634,13 @@
     padding-top: 15px;
     padding-bottom: 0;
 }
+/*rating*/
+.star-rating {
+    line-height:32px;
+    font-size:1.25em;
+  }
+  
+.star-rating .fa-star{color: yellow;}
+.rating {
+    margin-right: 60px;
+}
