--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 	<div class="row clearfix cate-block justify-center scroll-items">
 	   
 	   <%category.forEach(item => {%>
-		<a href="product/<%-item.id%>" title="Bàn" class="col-lg-2 col-sm-4 col-6 cate-item scroll-item-inner">
+		<a href="/product/<%-item.name%>.<%-item.id%>" title="Bàn" class="col-lg-2 col-sm-4 col-6 cate-item scroll-item-inner">
 			<div class="cate-item-inner">
 			   <div class="cate-img"></div>
 			   <h3><%-item.name%></h3>
