--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -266,7 +266,7 @@
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#user">
                       <span class="fas fa-user-tag fa-1x"></span>
-                      <label class="panel-title-label">Hồ sơ người dùng</label>
+                      <label class="panel-title-label">Hồ sơ</label>
                     </a>
                 </h4>
             </div>
@@ -275,7 +275,12 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <span class="fas fa-list text-danger"></span><a href="{!! url('admin/user/list') !!}">&ensp;Hồ Sơ Người Dùng</a>
+                                <span class="fas fa-list text-danger"></span><a href="/admin/profile/shop">&ensp;Hồ Sơ Nhà bán</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="fas fa-list text-danger"></span><a href="/admin/profile/user">&ensp;Hồ Sơ Người dùng</a>
                             </td>
                         </tr>
                     </table>
