--- a/views/shop/product/productDetail.ejs
+++ b/views/shop/product/productDetail.ejs
@@ -48,8 +48,7 @@
             <h3 class="product_details_name"><%-data[0].name%></h3>
             <div class="product_details_block_info" style="display: flex;">
                 <span style="flex: 0.45;">Mã sản phẩm: SM116</span>
-                <span style="flex: 0.4;">Thương hiệu: </span>
-                <span style="flex: 0.3;">Loại: </span>
+                <span style="flex: 0.3;">Shop cung cấp: <a href="/shop/<%-shop.shop_name%>.<%-shop.id%>"><%-shop.shop_name%></a></span>
             </div>
             <div style="border-bottom: 1px #80808042 dashed; margin: 5px;"></div>
             <h5 style="margin-top: 15px;">
